--- a/mobile/2-UserProfiles/userrewardshistory.html
+++ b/mobile/2-UserProfiles/userrewardshistory.html
@@ -12,154 +12,145 @@
             box-sizing: border-box;
         }
         :root {
-    --primary-color: #FFC107;
-    --secondary-color: #212121;
-    --accent-color: #FFFFFF;
-    --card-bg: #2A2B32;
-    --light-bg: #1E1F26;
-    --text-color: #FFFFFF;
-    --danger-color: #D32F2F;
-    --footer-height: 70px;
-    --header-height: 58px;
-    --border-dark: #444754; /* ✅ added this */
-}
-
-body {
-    font-family: 'Poppins', Arial, sans-serif;
-    background-color: var(--light-bg);
-    color: var(--text-color);
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    overflow-x: hidden;
-}
-
-.header {
-    background: var(--secondary-color);
-    height: var(--header-height);
-    padding: 15px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.title {
-    font-size: 24px;
-    font-weight: 600;
-    color: var(--primary-color);
-    text-transform: uppercase;
-    letter-spacing: 1px;
-}
-
-.content {
-    flex: 1;
-    padding: 20px;
-    overflow-y: auto;
-    background: url('data:image/svg+xml,%3Csvg width="40" height="40" viewBox="0 0 40 40" xmlns="" fill="%23FFC107" fill-opacity="0.1"/%3E%3C/svg%3E') repeat;
-}
-
-.history-list {
-    list-style: none;
-    padding: 0;
-    width: 90%;
-    max-width: 500px;
-    margin: 0 auto;
-}
-
-.history-item {
-    position: relative;
-    background: var(--card-bg);
-    color: var(--text-color);         /* white */
-    padding: 15px;
-    margin: 10px 0;
-    border: 2px solid var(--border-dark); /* ✅ updated here */
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-    overflow: hidden;
-    user-select: none;
-}
-
-.history-item:hover {
-    transform: translateY(-5px);
-}
-
-.history-item strong {
-    color: var(--text-color);
-    font-size: 16px;
-    font-weight: 600;
-}
-
-.history-item.swiped {
-    transform: translateX(-100px);
-}
-
-.delete-btn {
-    position: absolute;
-    right: -100px;
-    top: 0;
-    height: 100%;
-    background: var(--danger-color);
-    color: white;
-    border: none;
-    border-radius: 0 10px 10px 0;
-    padding: 0 20px;
-    font-size: 16px;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: right 0.3s ease, background-color 0.3s ease;
-}
-
-.history-item.swiped .delete-btn {
-    right: 0;
-}
-
-.delete-btn:hover {
-    background: #B71C1C;
-}
-
-.footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: var(--footer-height);
-    background: var(--secondary-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
-}
-
-.footer a {
-    text-decoration: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: var(--text-color);
-    transition: transform 0.3s ease;
-}
-
-.footer a:hover {
-    transform: scale(1.1);
-}
-
-.footer img {
-    width: 40px;
-    height: 40px;
-    filter: invert(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
-}
-
-@media (max-width: 600px) {
-    .footer img {
-        width: 35px;
-        height: 35px;
-    }
-}
+            --primary-color: #FFC107;
+            --secondary-color: #212121;
+            --accent-color: #FFFFFF;
+            --card-bg: #2A2B32;
+            --light-bg: #1E1F26;
+            --text-color: #FFFFFF;
+            --danger-color: #D32F2F;
+            --footer-height: 70px;
+            --header-height: 58px;
+            --border-dark: #444754;
+        }
+        body {
+            font-family: 'Poppins', Arial, sans-serif;
+            background-color: var(--light-bg);
+            color: var(--text-color);
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            overflow-x: hidden;
+        }
+        .header {
+            background: var(--secondary-color);
+            height: var(--header-height);
+            padding: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 100;
+        }
+        .title {
+            font-size: 24px;
+            font-weight: 600;
+            color: var(--primary-color);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+        .content {
+            position: absolute;
+            top: var(--header-height);
+            bottom: var(--footer-height);
+            width: 100%;
+            padding: 20px;
+            overflow-y: auto;
+            background: url('data:image/svg+xml,%3Csvg width="40" height="40" viewBox="0 0 40 40" xmlns="" fill="%23FFC107" fill-opacity="0.1"/%3E%3C/svg%3E') repeat;
+        }
+        .history-list {
+            list-style: none;
+            padding: 0;
+            width: 90%;
+            max-width: 500px;
+            margin: 0 auto;
+        }
+        .history-item {
+            position: relative;
+            background: var(--card-bg);
+            color: var(--text-color);
+            padding: 15px;
+            margin: 10px 0;
+            border: 2px solid var(--border-dark);
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+            overflow: hidden;
+            user-select: none;
+        }
+        .history-item:hover {
+            transform: translateY(-5px);
+        }
+        .history-item strong {
+            color: var(--text-color);
+            font-size: 16px;
+            font-weight: 600;
+        }
+        .history-item.swiped {
+            transform: translateX(-100px);
+        }
+        .delete-btn {
+            position: absolute;
+            right: -100px;
+            top: 0;
+            height: 100%;
+            background: var(--danger-color);
+            color: white;
+            border: none;
+            border-radius: 0 10px 10px 0;
+            padding: 0 20px;
+            font-size: 16px;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: right 0.3s ease, background-color 0.3s ease;
+        }
+        .history-item.swiped .delete-btn {
+            right: 0;
+        }
+        .delete-btn:hover {
+            background: #B71C1C;
+        }
+        .footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            height: var(--footer-height);
+            background: var(--secondary-color);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
+            z-index: 100;
+        }
+        .footer a {
+            text-decoration: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            color: var(--text-color);
+            transition: transform 0.3s ease;
+        }
+        .footer a:hover {
+            transform: scale(1.1);
+        }
+        .footer img {
+            width: 40px;
+            height: 40px;
+            filter: invert(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
+        }
+        @media (max-width: 600px) {
+            .footer img {
+                width: 35px;
+                height: 35px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -180,114 +171,145 @@ body {
     </div>
 
     <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const userName = urlParams.get('user');
+    document.addEventListener("DOMContentLoaded", () => {
+      const urlParams = new URLSearchParams(window.location.search);
+      const userName = urlParams.get('user');
+      let adminEmail = urlParams.get('adminEmail') || localStorage.getItem("currentAdminEmail");
 
-        if (userName) {
-            document.getElementById('userName').textContent = userName;
-            document.getElementById('backButton').href = `userrewards.html?user=${userName}`;
-            loadRewardHistory(userName);
+      if (adminEmail && adminEmail !== "null") {
+        localStorage.setItem("currentAdminEmail", adminEmail);
+      }
+
+      if (userName && adminEmail) {
+        document.getElementById('userName').textContent = userName;
+        document.getElementById('backButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/userrewards.html?user=${encodeURIComponent(userName)}&adminEmail=${encodeURIComponent(adminEmail)}`;
+        loadRewardHistory(userName);
+      } else {
+        document.getElementById('historyList').innerHTML = "<p>Error: Missing user or admin email. Please log in again.</p>";
+      }
+    });
+
+    async function loadRewardHistory(userName) {
+      const historyList = document.getElementById("historyList");
+      historyList.innerHTML = "<p>Loading reward history...</p>";
+
+      const adminEmail = localStorage.getItem("currentAdminEmail");
+      let history = [];
+
+      try {
+        const response = await fetch(`https://beemazing.onrender.com/api/reward-history?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Failed to fetch reward history");
+        history = data.rewardHistory[userName] || [];
+      } catch (err) {
+        console.error("Error loading reward history:", err);
+        historyList.innerHTML = "<p>Failed to load reward history. Please try again later.</p>";
+        return;
+      }
+
+      historyList.innerHTML = "";
+      if (history.length === 0) {
+        historyList.innerHTML = "<p>No rewards received yet.</p>";
+        return;
+      }
+
+      const reversedHistory = [...history].reverse();
+
+      reversedHistory.forEach((reward, index) => {
+        const historyItem = document.createElement("li");
+        historyItem.className = "history-item";
+        historyItem.innerHTML = `
+          <strong>${reward.name}</strong><br>
+          Collected on: ${reward.date}<br>
+          Received on: ${reward.receivedDate}
+        `;
+
+        const deleteButton = document.createElement("button");
+        deleteButton.className = "delete-btn";
+        deleteButton.textContent = "Delete";
+        deleteButton.addEventListener("click", () => {
+          deleteReward(userName, history.length - 1 - index);
+          loadRewardHistory(userName);
+        });
+        historyItem.appendChild(deleteButton);
+
+        let startX = 0;
+        let currentX = 0;
+        let isSwiping = false;
+
+        // Touch events
+        historyItem.addEventListener("touchstart", (e) => {
+          startX = e.touches[0].clientX;
+          isSwiping = true;
+        });
+
+        historyItem.addEventListener("touchmove", (e) => {
+          if (!isSwiping) return;
+          currentX = e.touches[0].clientX;
+          const diffX = startX - currentX;
+          if (diffX > 50) {
+            historyItem.classList.add("swiped");
+          } else if (diffX < -50) {
+            historyItem.classList.remove("swiped");
+          }
+        });
+
+        historyItem.addEventListener("touchend", () => {
+          isSwiping = false;
+        });
+
+        // Mouse events (for desktop)
+        historyItem.addEventListener("mousedown", (e) => {
+          startX = e.clientX;
+          isSwiping = true;
+        });
+
+        historyItem.addEventListener("mousemove", (e) => {
+          if (!isSwiping) return;
+          currentX = e.clientX;
+          const diffX = startX - currentX;
+          if (diffX > 50) {
+            historyItem.classList.add("swiped");
+          } else if (diffX < -50) {
+            historyItem.classList.remove("swiped");
+          }
+        });
+
+        historyItem.addEventListener("mouseup", () => {
+          isSwiping = false;
+        });
+
+        historyList.appendChild(historyItem);
+      });
+    }
+
+    async function deleteReward(userName, index) {
+      const adminEmail = localStorage.getItem("currentAdminEmail");
+      try {
+        const response = await fetch(`https://beemazing.onrender.com/api/reward-history?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Failed to fetch reward history");
+        const rewardHistory = data.rewardHistory || {};
+        const history = rewardHistory[userName] || [];
+
+        if (history[index]) {
+          history.splice(index, 1);
+          if (history.length === 0) {
+            delete rewardHistory[userName];
+          } else {
+            rewardHistory[userName] = history;
+          }
+          await fetch("https://beemazing.onrender.com/api/reward-history", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ adminEmail, rewardHistory })
+          });
         }
-
-        function loadRewardHistory(userName) {
-            const rewardHistory = JSON.parse(localStorage.getItem("familyApp_reward_history")) || {};
-            const history = rewardHistory[userName] || [];
-            const historyList = document.getElementById("historyList");
-
-            historyList.innerHTML = "";
-            if (history.length === 0) {
-                historyList.innerHTML = "<p>No rewards received yet.</p>";
-                return;
-            }
-
-            // Reverse the history array to show newest first
-            const reversedHistory = [...history].reverse();
-
-            reversedHistory.forEach((reward, index) => {
-                const historyItem = document.createElement("li");
-                historyItem.className = "history-item";
-                historyItem.innerHTML = `
-                    <strong>${reward.name}</strong><br>
-                    Collected on: ${reward.date}<br>
-                    Received on: ${reward.receivedDate}
-                `;
-
-                // Create delete button
-                const deleteButton = document.createElement("button");
-                deleteButton.className = "delete-btn";
-                deleteButton.textContent = "Delete";
-                deleteButton.addEventListener("click", () => {
-                    // Use the original index (history.length - 1 - index) due to reversal
-                    deleteReward(userName, history.length - 1 - index);
-                    loadRewardHistory(userName);
-                });
-                historyItem.appendChild(deleteButton);
-
-                // Swipe functionality
-                let startX = 0;
-                let currentX = 0;
-                let isSwiping = false;
-
-                // Touch events
-                historyItem.addEventListener("touchstart", (e) => {
-                    startX = e.touches[0].clientX;
-                    isSwiping = true;
-                });
-
-                historyItem.addEventListener("touchmove", (e) => {
-                    if (!isSwiping) return;
-                    currentX = e.touches[0].clientX;
-                    const diffX = startX - currentX;
-                    if (diffX > 50) {
-                        historyItem.classList.add("swiped");
-                    } else if (diffX < -50) {
-                        historyItem.classList.remove("swiped");
-                    }
-                });
-
-                historyItem.addEventListener("touchend", () => {
-                    isSwiping = false;
-                });
-
-                // Mouse events (for desktop)
-                historyItem.addEventListener("mousedown", (e) => {
-                    startX = e.clientX;
-                    isSwiping = true;
-                });
-
-                historyItem.addEventListener("mousemove", (e) => {
-                    if (!isSwiping) return;
-                    currentX = e.clientX;
-                    const diffX = startX - currentX;
-                    if (diffX > 50) {
-                        historyItem.classList.add("swiped");
-                    } else if (diffX < -50) {
-                        historyItem.classList.remove("swiped");
-                    }
-                });
-
-                historyItem.addEventListener("mouseup", () => {
-                    isSwiping = false;
-                });
-
-                historyList.appendChild(historyItem);
-            });
-        }
-
-        function deleteReward(userName, index) {
-            const rewardHistory = JSON.parse(localStorage.getItem("familyApp_reward_history")) || {};
-            const history = rewardHistory[userName] || [];
-
-            if (history[index]) {
-                history.splice(index, 1); // Remove the reward at the given index
-                if (history.length === 0) {
-                    delete rewardHistory[userName]; // Remove user entry if no rewards remain
-                } else {
-                    rewardHistory[userName] = history;
-                }
-                localStorage.setItem("familyApp_reward_history", JSON.stringify(rewardHistory));
-            }
-        }
+      } catch (err) {
+        console.error("Error deleting reward:", err);
+        alert("Failed to delete reward. Please try again.");
+      }
+    }
     </script>
 </body>
 </html>
