--- a/mobile/4-Market/luckychest.html
+++ b/mobile/4-Market/luckychest.html
@@ -511,36 +511,36 @@
       }
     }
 
-    async function openAssignModal() {
-      try {
-        const response = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
-        const data = await response.json();
-        if (!response.ok) throw new Error(data.error || "Failed to fetch users");
-        const users = Object.keys(data.rewards || {});
-        userListEl.innerHTML = "";
-        selectUserBtn.textContent = "Select User";
-        selectedUserInput.value = "";
-        modalTitle.textContent = `Assign "${selectedChest.name}"`;
-        users.forEach(user => {
-          const li = document.createElement("li");
-          li.textContent = user;
-          li.addEventListener("click", () => {
-            selectedUserInput.value = user;
-            selectUserBtn.textContent = "Selected: " + user;
-            userListEl.style.display = "none";
-          });
-          userListEl.appendChild(li);
-        });
-        deleteChestBtn.style.display = selectedChest.isCustom ? "block" : "none";
-        if (selectedChest.isCustom) {
-          deleteChestBtn.onclick = () => deleteChest(selectedChest.name);
-        }
-        assignModal.classList.add("show");
-      } catch (err) {
-        console.error("Error loading users:", err);
-        alert("Failed to load users. Please try again.");
-      }
+async function openAssignModal() {
+  try {
+    const response = await fetch(`https://beemazing.onrender.com/get-users?adminEmail=${encodeURIComponent(adminEmail)}`);
+    const data = await response.json();
+    if (!response.ok || !data.success) throw new Error(data.message || "Failed to fetch users");
+    const users = data.users || [];
+    userListEl.innerHTML = "";
+    selectUserBtn.textContent = "Select User";
+    selectedUserInput.value = "";
+    modalTitle.textContent = `Assign "${selectedChest.name}"`;
+    users.forEach(user => {
+      const li = document.createElement("li");
+      li.textContent = user;
+      li.addEventListener("click", () => {
+        selectedUserInput.value = user;
+        selectUserBtn.textContent = "Selected: " + user;
+        userListEl.style.display = "none";
+      });
+      userListEl.appendChild(li);
+    });
+    deleteChestBtn.style.display = selectedChest.isCustom ? "block" : "none";
+    if (selectedChest.isCustom) {
+      deleteChestBtn.onclick = () => deleteChest(selectedChest.name);
     }
+    assignModal.classList.add("show");
+  } catch (err) {
+    console.error("Error loading users:", err);
+    alert("Failed to load users. Please try again.");
+  }
+}
 
     async function assignChest() {
       const user = selectedUserInput.value;
@@ -572,33 +572,33 @@
     }
 
     async function openDiceModal() {
-      try {
-        const response = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
-        const data = await response.json();
-        if (!response.ok) throw new Error(data.error || "Failed to fetch users");
-        const users = Object.keys(data.rewards || {});
-        diceUserSelect.innerHTML = users.map(u => `<option value="${u}">${u}</option>`).join("");
-        diceRewards.innerHTML = "";
-        for (let i = 1; i <= 6; i++) {
-          const defaultReward = rewardOptions[i - 1];
-          diceRewards.innerHTML += `
-            <div class="form-group">
-              <label>Reward for ${i}:</label>
-              <select onchange="toggleExtraInput(this, ${i})" id="rewardSelect${i}">
-                ${rewardOptions.map(opt => `
-                  <option value="${opt}" ${opt === defaultReward ? 'selected' : ''}>${opt}</option>
-                `).join("")}
-              </select>
-              <input type="text" id="extraInput${i}" placeholder="Enter value..." style="display:${defaultReward === 'Honey (amount)' ? 'block' : 'none'}; margin-top:5px;" />
-            </div>
-          `;
-        }
-        diceModal.classList.add("show");
-      } catch (err) {
-        console.error("Error loading users:", err);
-        alert("Failed to load users. Please try again.");
-      }
+  try {
+    const response = await fetch(`https://beemazing.onrender.com/get-users?adminEmail=${encodeURIComponent(adminEmail)}`);
+    const data = await response.json();
+    if (!response.ok || !data.success) throw new Error(data.message || "Failed to fetch users");
+    const users = data.users || [];
+    diceUserSelect.innerHTML = users.map(u => `<option value="${u}">${u}</option>`).join("");
+    diceRewards.innerHTML = "";
+    for (let i = 1; i <= 6; i++) {
+      const defaultReward = rewardOptions[i - 1];
+      diceRewards.innerHTML += `
+        <div class="form-group">
+          <label>Reward for ${i}:</label>
+          <select onchange="toggleExtraInput(this, ${i})" id="rewardSelect${i}">
+            ${rewardOptions.map(opt => `
+              <option value="${opt}" ${opt === defaultReward ? 'selected' : ''}>${opt}</option>
+            `).join("")}
+          </select>
+          <input type="text" id="extraInput${i}" placeholder="Enter value..." style="display:${defaultReward === 'Honey (amount)' ? 'block' : 'none'}; margin-top:5px;" />
+        </div>
+      `;
     }
+    diceModal.classList.add("show");
+  } catch (err) {
+    console.error("Error loading users:", err);
+    alert("Failed to load users. Please try again.");
+  }
+}
 
     function toggleExtraInput(selectEl, index) {
       const extraInput = document.getElementById("extraInput" + index);
